# gzide

./: .glic  .pre-commit-config.yaml  pyproject.toml
nomos/: shortcuts.py  urls.py
nomos/contrib/: __init__.py
nomos/contrib/bulma/: apps.py  forms.py  mixins.py
nomos/contrib/bulma/templates/nomos/bulma/: form_v.html
nomos/forms/: renderers.py
nomos/template/: defaulttags.py  library.py
nomos/views/: __init__.py
nomos/views/generic/: base.py  detail.py  edit.py  list.py  menu.py  models.py  sequence.py
nomos/views/generic/templates/models/: detail.html  form.html  list.html  main.html
