# gcca
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nomos"
description = "Nomos development kit"
version = "0.0.1"
requires-python = ">=3.9"
authors = [
  { name = "Cristhian Gonzales", email = "yo@gcca.dev" }
]
dependencies = [
  "Django>=4.2",
  "django-stubs-ext>=4.2.2",
  'typing_extensions; python_version<"3.10"'
]
license = {text = "GPLv3"}
classifiers = [
  "Development Status :: 2 - Alpha",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GPLv3 License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.optional-dependencies]
dev = ["pre-commit==3.0.2"]

[project.urls]
homepage = "https://github.com/gcca/nomos"
repository = "https://github.com/gcca/nomos"

[tool.setuptools]
packages = ["nomos"]
